/*
 * Copyright 2021 Mia srl
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
import React from 'react'
import {render} from '@testing-library/react'

import RootComponent from '../RootComponent'

describe('RootComponent tests', () => {
  it('is not broken with empty configuration', () => {
    // @ts-ignore
    const {asFragment} = render(<RootComponent />)
    expect(asFragment()).toMatchSnapshot()
  })

  it('render a row', () => {
    const {asFragment} = render(<RootComponent type={'row'} />)
    expect(asFragment()).toMatchSnapshot()
  })
})
