// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RootComponent tests is not broken with empty configuration 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`RootComponent tests render a row 1`] = `
<DocumentFragment>
  <div />
  <div>
    <div
      style="display: \\"flex\\"; flex-direction: \\"column\\";"
    />
  </div>
</DocumentFragment>
`;
